<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".birdHeadColourFragment">

    <!-- DONE: Update blank fragment layout -->
    <TextView
        android:id="@+id/choose_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/choose_an_head_colour_of_the_bird_you_saw" />

    <TextView
        android:id="@+id/filter_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:paddingBottom="20dp"
        android:text="@string/filter" />

    <Button
        android:id="@+id/bird_colour_option_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/white" />

    <Button
        android:id="@+id/bird_colour_option_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue" />

    <Button
        android:id="@+id/bird_colour_option_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/black" />

    <Button
        android:id="@+id/bird_colour_option_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red" />

    <Button
        android:id="@+id/bird_colour_option_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grey" />

    <Button
        android:id="@+id/bird_colour_option_yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yellow" />

</LinearLayout>